issues with position fixed, dropwdown menu and overflow body fixed

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -5,6 +5,7 @@
 }
 
 html {
+  overflow-x: hidden;
   font-size: $rem;
 }
 
